add seo headers

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,24 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- possible content values: default, black or black-translucent -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="theme-color" content="#0f212e" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="theme-color" content="%REACT_APP_BG_COLOR%" />
+    <meta name="description" content="%REACT_APP_DESC%" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://%REACT_APP_DOMAIN%" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="%REACT_APP_TITLE%" />
+    <meta property="og:description" content="%REACT_APP_DESC%" />
+    <meta property="og:image" content="https://%REACT_APP_DOMAIN%/thumbnail.jpeg" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="%REACT_APP_DOMAIN%" />
+    <meta property="twitter:url" content="https://%REACT_APP_DOMAIN%" />
+    <meta name="twitter:title" content="%REACT_APP_TITLE%" />
+    <meta name="twitter:description" content="%REACT_APP_DESC%" />
+    <meta name="twitter:image" content="https://%REACT_APP_DOMAIN%/thumbnail.jpeg" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,7 +33,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet" />
-    <title>ORDA | By Dr.Cad</title>
+    <title>%REACT_APP_SITE_TITLE%</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
